syntax = "proto3";

package user;

option go_package = "knowladge-test/answer_7/proto";

// User message
message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

// Request message for GetUsers
message GetUsersRequest {}

// Response message for GetUsers
message GetUsersResponse {
  repeated User users = 1;
  string message = 2;
}

// UserService definition
service UserService {
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
}